<resources>
    <string name="app_name">MarriageCountdown</string>
    <string name="select_default_text">Select Wedding Date</string>
    <string name="default_countdown">0 days 00: 00</string>
    <string name="zero">00</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="until_the_wedding">Until the Wedding</string>
    <string name="edit_wedding_date">Edit Wedding Date</string>
</resources>