<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/edit_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hedvig"
                android:text="@string/zero"
                android:textColor="@color/dark_purple"
                android:textSize="70sp" />

            <TextView
                android:id="@+id/days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hedvig"
                android:text="@string/days"
                android:textColor="@color/light_purple"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hedvig"
                android:text="@string/zero"
                android:textColor="@color/dark_purple"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/hours_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hedvig"
                android:text="@string/hours"
                android:textColor="@color/light_purple"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hedvig"
                android:text="@string/zero"
                android:textColor="@color/dark_purple"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/minutes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hedvig"
                android:text="@string/minutes"
                android:textColor="@color/light_purple"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hedvig"
                android:text="@string/zero"
                android:textColor="@color/dark_purple"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/seconds_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hedvig"
                android:text="@string/seconds"
                android:textColor="@color/light_purple"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/until_the_wedding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/hedvig"
        android:text="@string/until_the_wedding"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/edit_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/selected_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hedvig"
            android:text="@string/edit_wedding_date"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/edit_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5sp"
            android:src="@drawable/edit"
            app:tint="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>